fixed error handling if creating derived table failed single row subquery always can return NULL (no rows found) (BUG#5590)