sql/sql_derived.cc
@@ -224,7 +224,10 @@ static int mysql_derived(THD *thd, LEX *lex, SELECT_LEX_UNIT *unit,
     }
   }
   else
+  {
     free_tmp_table(thd, table);
+    thd->lex->unit.cleanup();
+  }
 
 exit:
   delete derived_result;
